--- a/index.html
+++ b/index.html
@@ -191,10 +191,11 @@
     
 
 <div class="footer">
-      <div class="container">
+      <div class="container textcenter">
           <div class="row">
-                <div class="col-md-4"><p class="text-muted">Charity No. 1127096</p></div>
-                <div class="col-md-4"><p>© Have Stick Will Travel 2010</p></div>
+                <div class="col-md-4"><p class="text-muted footer">Charity No. 1127096</p></div>
+                <div class="col-md-4"><p class="footer">© Have Stick Will Travel 2010</p></div>
+                <div class="col-md-4"><p class="footer">Web Design by <a href="ivy.davenport@hotmail.co.uk">DI-Design</a></p></div>
           </div>
       </div>
 </div>
