--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="row">
                 <div class="col-md-4"><p class="text-muted footer">Charity No. 1127096</p></div>
                 <div class="col-md-4"><p class="footer">© Have Stick Will Travel 2010</p></div>
-                <div class="col-md-4"><p class="footer">Web Design by <a href="ivy.davenport@hotmail.co.uk">DI-Design</a></p></div>
+                <div class="col-md-4"><p class="footer">Web Design by <a href="http://kitto1.github.io/didesign/">DI-Design</a></p></div>
           </div>
       </div>
 </div>
